Updated styling to handle for keyboard on mobile. Updated styling of recap screen + spelling error

--- a/platforms/android/app/src/main/res/xml/config.xml
+++ b/platforms/android/app/src/main/res/xml/config.xml
@@ -21,5 +21,6 @@
     <allow-intent href="geo:*" />
     <allow-intent href="market:*" />
     <preference name="loglevel" value="DEBUG" />
+    <preference name="SplashScreenDelay" value="100" />
     <preference name="KeyboardDisplayRequiresUserAction" value="false" />
 </widget>
