--- a/platforms/android/app/src/main/res/xml/config.xml
+++ b/platforms/android/app/src/main/res/xml/config.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<widget id="io.cordova.hellocordova" version="1.0.0" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
+<widget id="com.perlmanlabs.linguisti" version="1.0.0" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
     <feature name="Whitelist">
         <param name="android-package" value="org.apache.cordova.whitelist.WhitelistPlugin" />
         <param name="onload" value="true" />
@@ -11,6 +11,7 @@
     <author email="jason@perlman.dev" href="http://www.perlmanlabs.com/">
         Jason Perlman (PerlmanLabs)
     </author>
+    <icon src="/static/dog.png" />
     <content src="dist/index.html" />
     <access origin="*" />
     <allow-intent href="http://*/*" />
